--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,15 @@
 name: Deploy RDS MySQL with Terraform
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
+      - developer
   pull_request:
+    branches:
+      - main
+      - developer
 
 jobs:
   terraform:
