--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,14 +2,10 @@ name: Deploy RDS MySQL with Terraform
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
-      - developer
   pull_request:
-    branches:
-      - main
-      - developer
+    branches: [main]
+  push:
+    branches: [main]
 
 jobs:
   terraform:
